1) created a new build flavor for espresso tests 2) create a new source set full of espresso tests 3) updated proguard-testing.pro 4) added test device numbers to .gitignore
// FREEBIE

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,9 @@ dependencies {
     androidTestCompile ('com.squareup.assertj:assertj-android:1.0.0') {
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
-    androidTestCompile 'com.android.support.test:runner:0.2'
+    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.1') {
+        exclude group: 'javax.inject'
+    }
 }
 
 dependencyVerification {
@@ -120,6 +122,13 @@ android {
         }
     }
 
+    productFlavors {
+        base { }
+        espresso {
+            testInstrumentationRunner "org.smssecure.smssecure.SMSSecureWakingTestRunner"
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -160,8 +169,15 @@ android {
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
         }
+        espresso {
+            manifest.srcFile 'test/espresso/AndroidManifest.xml'
+        }
         androidTest {
             java.srcDirs = ['test/androidTest/java']
+        }
+        androidTestEspresso {
+            java.srcDirs = ['test/androidTestEspresso/java']
+            res.srcDirs  = ['test/androidTestEspresso/res']
         }
     }
 
