make running the espresso tests optional via -Pespresso=1 command line arg
// FREEBIE

--- a/build.gradle
+++ b/build.gradle
@@ -122,13 +122,6 @@ android {
         }
     }
 
-    productFlavors {
-        base { }
-        espresso {
-            testInstrumentationRunner "org.smssecure.smssecure.SMSSecureWakingTestRunner"
-        }
-    }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -169,15 +162,8 @@ android {
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
         }
-        espresso {
-            manifest.srcFile 'test/espresso/AndroidManifest.xml'
-        }
         androidTest {
             java.srcDirs = ['test/androidTest/java']
-        }
-        androidTestEspresso {
-            java.srcDirs = ['test/androidTestEspresso/java']
-            res.srcDirs  = ['test/androidTestEspresso/res']
         }
     }
 
@@ -215,4 +201,20 @@ if (propFile.canRead()){
 }else {
     println 'signing.properties not found'
     android.buildTypes.release.signingConfig = null
+}
+
+if (project.hasProperty('espresso')) {
+    android.productFlavors {
+        base {}
+        espresso {
+            testInstrumentationRunner "org.smssecure.smssecure.SMSSecureWakingTestRunner"
+        }
+    }
+    android.sourceSets.espresso {
+        manifest.srcFile 'test/espresso/AndroidManifest.xml'
+    }
+    android.sourceSets.androidTestEspresso {
+        java.srcDirs = ['test/androidTestEspresso/java']
+        res.srcDirs  = ['test/androidTestEspresso/res']
+    }
 }
