1) renamed test build type to 'debugTest' because updated gradle plugin doesn't allow build types to start with 'test'.
2) exclude support-annotations to avoid warning

Closes https://github.com/WhisperSystems/TextSecure/pull/3273
// FREEBIE

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -1,14 +1,7 @@
 -dontoptimize
--keepattributes SourceFile,LineNumberTable,Exceptions
--dontskipnonpubliclibraryclassmembers
-
--dontwarn android.test.**
--dontwarn com.android.support.test.**
--dontwarn sun.reflect.**
--dontwarn org.assertj.**
--dontwarn org.hamcrest.**
--dontwarn org.mockito.**
--dontwarn com.squareup.**
+-keepattributes SourceFile,LineNumberTable
+-keep class org.whispersystems.** { *; }
+-keep class org.smssecure.smssecure.** { *; }
 
 
 # appcompat-v7
@@ -112,8 +105,3 @@
 -dontwarn java.nio.file.*
 -dontwarn org.codehaus.mojo.animal_sniffer.IgnoreJRERequirement
 -dontwarn okio.**
-
-
-# SMSSecure
--keep class org.whispersystems.** { *; }
--keep class org.smssecure.smssecure.** { *; }
