--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,11 @@ dependencies {
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
     androidTestCompile ('com.squareup.assertj:assertj-android:1.0.0') {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+        exclude group: 'org.hamcrest',        module: 'hamcrest-core'
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile ('com.android.support.test:runner:0.2') {
+        exclude group: 'com.android.support', module: 'support-annotations'
     }
     androidTestCompile ('com.android.support.test.espresso:espresso-core:2.1') {
         exclude group: 'javax.inject'
@@ -104,6 +108,7 @@ dependencyVerification {
 android {
     compileSdkVersion 22
     buildToolsVersion '22.0.1'
+    testBuildType "debugTest"
 
     defaultConfig {
         versionCode 106
@@ -149,6 +154,9 @@ android {
             minifyEnabled true
             proguardFiles = buildTypes.debug.proguardFiles
             signingConfig signingConfigs.release
+        }
+        debugTest.initWith(buildTypes.debug){
+             proguardFile 'proguard-testing.pro'
         }
     }
 
