refactor proguard rules, use new upstream tests

--- a/build.gradle
+++ b/build.gradle
@@ -68,9 +68,16 @@ dependencies {
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
     androidTestCompile ('com.squareup.assertj:assertj-android:1.0.0') {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+        exclude group: 'org.hamcrest',        module: 'hamcrest-core'
+        exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestCompile 'com.android.support.test:runner:0.2'
+    androidTestCompile ('com.android.support.test:runner:0.2') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.1') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'javax.inject'
+    }
 }
 
 dependencyVerification {
@@ -156,7 +163,16 @@ android {
     buildTypes {
         debug {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard.cfg'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                          'proguard-dagger.pro',
+                          'proguard-jackson.pro',
+                          'proguard-sqlite.pro',
+                          'proguard-appcompat-v7.pro',
+                          'proguard-square-okhttp.pro',
+                          'proguard-square-okio.pro',
+                          'proguard-rounded-image-view.pro',
+                          'proguard-glide.pro',
+                          'proguard.cfg'
         }
         release {
             minifyEnabled true
@@ -176,10 +192,7 @@ android {
             assets.srcDirs = ['assets']
         }
         androidTest {
-            java.srcDirs = ['androidTest/java']
-            resources.srcDirs = ['androidTest/java']
-            aidl.srcDirs = ['androidTest/java']
-            renderscript.srcDirs = ['androidTest/java']
+            java.srcDirs = ['test/androidTest/java']
         }
     }
 
@@ -217,4 +230,29 @@ if (propFile.canRead()){
 }else {
     println 'signing.properties not found'
     android.buildTypes.release.signingConfig = null
+}
+
+if (project.hasProperty('espresso') && System.console() != null) {
+    println "______________________WARNING_______________________"
+    println "ALL YOUR CONTACTS WILL BE DELETED IN THE PROCESS"
+    println "OF RUNNING THESE TESTS, TYPE 'delete all my contacts'"
+    println "TO CONTINUE"
+    println "----------------------------------------------------"
+
+    def input = System.console().readLine(':')
+    if (input == 'delete all my contacts') {
+        android.productFlavors {
+            base {}
+            espresso {
+                testInstrumentationRunner "org.smssecure.smssecure.SMSSecureWakingTestRunner"
+            }
+        }
+        android.sourceSets.espresso {
+            manifest.srcFile 'test/espresso/AndroidManifest.xml'
+        }
+        android.sourceSets.androidTestEspresso {
+            java.srcDirs = ['test/androidTestEspresso/java']
+            res.srcDirs  = ['test/androidTestEspresso/res']
+        }
+    }
 }
