--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include 'libs:com.amulyakhare.textdrawable:library',
 'libs:com.android.support.support-v4-preferencefragment',
 'libs:com.commonsware.cwac.camera:camera',
-'libs:org.w3c.dom'
+'libs:org.w3c.dom',
+'libs:org.whispersystems.jobmanager'
