support for most filemanagers on shareintent

--- a/build.gradle
+++ b/build.gradle
@@ -166,6 +166,10 @@ android {
             testProguardFiles buildTypes.debug.testProguardFiles
             signingConfig signingConfigs.release
         }
+        debuggable.initWith(buildTypes.debug)
+        debuggable {
+
+        }
     }
 
     sourceSets {
